<resources>
    <string name="app_name">emPrendete</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bienvenido</string>
    <string name="nav_header_subtitle">Instituto Tecnologico de Matamoros</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="elemento1_toolbar_btn">Opcion 1</string>
    <string name="elemento2_toolbar_btn">Opcion 2</string>

    <string name="pagina_cero">emPrendete</string>
    <string name="pagina_uno">Participantes</string>
    <string name="pagina_dos">Proyectos</string>
    <string name="pagina_tres">Emite tu Voto</string>
    <string name="pagina_cuatro">Conferencias</string>
    <string name="pagina_cinco">Mentores</string>
    <string name="pagina_seis">Comite Organizador</string>
    <string name="pagina_siete">Patrocinadores</string>
    <string name="pagina_ocho">Acerca de</string>
    <string name="TextoDeSplash">\nCargando...</string>
    <string name="mentores_contacto_directo">Contacto directo:</string>
    <string name="mentores_biografiatexto">Un poco sobre mi:</string>
    <string name="descripcion_fotos">imagen</string>
    <string name="btn_anterior_texto">Anterior</string>
    <string name="btn_siguiente_texto">Siguiente</string>

</resources>