<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/pagina_home">

    <fragment
        android:id="@+id/pagina_home"
        android:name="com.alberto.emprendete.ui.pantallaA.ScreenCero"
        android:label="@string/pagina_cero"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/pagina_1"
        android:name="com.alberto.emprendete.ui.pantallaB.ScreenUno"
        android:label="@string/pagina_uno"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/pagina_2"
        android:name="com.alberto.emprendete.ui.pantallaC.ScreenDos"
        android:label="@string/pagina_dos"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/pagina_3"
        android:name="com.alberto.emprendete.ui.pantallade.ScreenTres"
        android:label="@string/pagina_tres"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/pagina_4"
        android:name="com.alberto.emprendete.ui.pantallaE.ScreenCuatro"
        android:label="@string/pagina_cuatro"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/pagina_5"
        android:name="com.alberto.emprendete.ui.pantallaF.ScreenCinco"
        android:label="@string/pagina_cinco"
        tools:layout="@layout/fragment_send" />
</navigation>